# scandinavian-embedding-benchmark

./: .cookiecutter.json  .cruft.json  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  citation.cff  create_table.py  error_logs.txt  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  run-e5-mistral.py  tasks.py  test.py  test.sh
.github/: pull_request_template.md  recommended_repo_setup.md
.github/workflows/: check_benchmark_is_up_to_date.yml  documentation.yml  lint.yml  release.yml  stalebot.yml  static_type_checks.yml  tests.yml
api/: index.html
cli/: index.html
create_cli_docs/: index.html
create_desc_stats/: index.html
datasets/: index.html
docs/: api.md  cli.md  conf.py  create_cli_docs.py  create_desc_stats.py  datasets.md  domains.md  faq.md  getting_started.ipynb  index.md  installation.md  paper.md  run_benchmark.py  speed_performance.md  task_type.md  update_benchmark_tables.py
docs/api/: docs_example.md
domains/: index.html
getting_started/: index.html
installation/: index.html
paper/: index.html
run_benchmark/: index.html
search/: search_index.json
speed_performance/: index.html
src/experimental_tasks/: historical_clustering.py  muni_intent_classification.py  swedn_sts.py
src/scripts/: check_benchmark_is_up_to_date.py
src/seb/: __init__.py  __main__.py  benchmark.py  cli.py  full_benchmark.py  model_interface.py  models.py  mteb_tasks.py  registries.py  result_dataclasses.py  results.py  seb_models.py  tasks_interface.py  types.py  utils.py  warning_ignore_manager.py
src/seb/cache/BAAI__bge-m3/: Angry_Tweets.json  Bornholm_Parallel.json  DKHate.json  DaLAJ.json  Da_Political_Comments.json  DanFEVER.json  LCC.json  Language_Identification.json  Massive_Intent.json  Massive_Scenario.json  NoReC.json  NorQuad.json  Norwegian_courts.json  Norwegian_parliament.json  SNL_Clustering.json  SNL_Retrieval.json  ScaLA.json  Speed_(CPU).json  SweFAQ.json  SweReC.json  SwednClustering.json  SwednRetrieval.json  TV2Nord_Retrieval.json  Twitterhjerne.json  VG_Clustering.json
src/seb/cache/KBLab__sentence-bert-swedish-cased/: Angry_Tweets.json  Bornholm_Parallel.json  DKHate.json  DaLAJ.json  Da_Political_Comments.json  DanFEVER.json  LCC.json  Language_Identification.json  Massive_Intent.json  Massive_Scenario.json  NoReC.json  NorQuad.json  Norwegian_courts.json  Norwegian_parliament.json  SNL_Clustering.json  SNL_Retrieval.json  ScaLA.json  Speed_(CPU).json  SweFAQ.json  SweReC.json  SwednClustering.json  SwednRetrieval.json  TV2Nord_Retrieval.json  Twitterhjerne.json  VG_Clustering.json
src/seb/cache/KB__bert-base-swedish-cased/: Angry_Tweets.json  Bornholm_Parallel.json  DKHate.json  DaLAJ.json  Da_Political_Comments.json  DanFEVER.json  LCC.json  Language_Identification.json  Massive_Intent.json  Massive_Scenario.json  NoReC.json  NorQuad.json  Norwegian_courts.json  Norwegian_parliament.json  SNL_Clustering.json  SNL_Retrieval.json  ScaLA.json  Speed_(CPU).json  SweFAQ.json  SweReC.json  SwednClustering.json  SwednRetrieval.json  TV2Nord_Retrieval.json  Twitterhjerne.json  VG_Clustering.json
src/seb/cache/KFST__XLMRoberta-en-da-sv-nb/: Angry_Tweets.json  Bornholm_Parallel.json  DKHate.json  DaLAJ.json  Da_Political_Comments.json  DanFEVER.json  LCC.json  Language_Identification.json  Massive_Intent.json  Massive_Scenario.json  NoReC.json  NorQuad.json  Norwegian_courts.json  Norwegian_parliament.json  SNL_Clustering.json  SNL_Retrieval.json  ScaLA.json  SweFAQ.json  SweReC.json  SwednClustering.json  SwednRetrieval.json  TV2Nord_Retrieval.json  Twitterhjerne.json  VG_Clustering.json
src/seb/cache/KennethEnevoldsen__dfm-sentence-encoder-large-1/: Angry_Tweets.json  Bornholm_Parallel.json  DKHate.json  DaLAJ.json  Da_Political_Comments.json  DanFEVER.json  LCC.json  Language_Identification.json  Massive_Intent.json  Massive_Scenario.json  NoReC.json  NorQuad.json  Norwegian_courts.json  Norwegian_parliament.json  SNL_Clustering.json  SNL_Retrieval.json  ScaLA.json  Speed_(CPU).json  SweFAQ.json  SweReC.json  SwednClustering.json  SwednRetrieval.json  TV2Nord_Retrieval.json  Twitterhjerne.json  VG_Clustering.json
src/seb/cache/KennethEnevoldsen__dfm-sentence-encoder-large-exp1/: Angry_Tweets.json  Bornholm_Parallel.json  DKHate.json  DaLAJ.json  Da_Political_Comments.json  DanFEVER.json  LCC.json  Language_Identification.json  Massive_Intent.json  Massive_Scenario.json  NoReC.json  NorQuad.json  Norwegian_courts.json  Norwegian_parliament.json  SNL_Clustering.json  SNL_Retrieval.json  ScaLA.json  Speed_(CPU).json  SweFAQ.json  SweReC.json  SwednClustering.json  SwednRetrieval.json  TV2Nord_Retrieval.json  Twitterhjerne.json  VG_Clustering.json
src/seb/cli/: __init__.py  cli.py  import_code.py  run.py  table.py
src/seb/interfaces/: language.py  model.py  mteb_task.py  task.py
src/seb/mteb_tasks/: __init__.py
src/seb/non_hf_models/: sonar_model.py
src/seb/registered_models/: __init__.py  arctic_models.py  bge_models.py  cohere_models.py  e5_instruct_models.py  e5_mistral.py  e5_models.py  fairseq_models.py  fasttext.py  fasttext_models.py  hf_models.py  jina_models.py  llm2vec_models.py  normalize_to_ndarray.py  openai_models.py  sentence_transformer_models.py  translate_e5_models.py  voyage_models.py
src/seb/registered_tasks/: __init__.py  danish.py  mteb_retrieval.py  mteb_tasks.py  mteb_tasks_clustering.py  multilingual.py  norwegian.py  speed.py  swedish.py
src/seb/seb_models/: __init__.py  cohere_models.py  e5_mistral.py  e5_models.py  fairseq_models.py  fasttext.py  hf_models.py  openai_models.py  test.py
src/seb/seb_tasks/: __init__.py  danish.py  multilingual.py  norwegian.py  swedish.py
src/seb/tasks/: danish.py
task_type/: index.html
tests/: dummy_model.py  dummy_task.py  test_all_models.py  test_benchmark.py  test_cli.py  test_integration.py  test_seb_models.py  test_speed_task.py  test_task_dependent_encode.py  test_tasks.py
tests/cli/: benchmark_cli_code_inject.py  test_cli.py
update_benchmark_tables/: index.html
(+1316 files in other folders)
