[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "seb"
version = "0.11.3"
authors = [
  { name = "Kenneth Enevoldsen", email = "Kennethcenevoldsen@gmail.com" },
]
description = "Scandinavian Embedding Benchmark"
classifiers = [
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"

dependencies = [
  "mteb[beir]==1.1.1",
  "pydantic>=2.1.0",
  "catalogue>=2.0.8",
  "radicli>=0.0.25",

]


[project.license]
file = "LICENSE"
name = "MIT"

[project.optional-dependencies]
dev = ["cruft>=2.0.0", "pyright==1.1.348", "ruff>=0.0.281"]
tests = ["pytest>=7.1.3", "pytest-cov>=3.0.0"]
docs = [
  "mkdocs-jupyter==0.24.6",
  "mkdocs-material==9.1.21",
  "mkdocstrings[python]==0.22.0",
  # for managing tables
  "datawrapper>=0.5.3",
  # for tutorials
  "jupyter>=1.0.0",
]
mistral = [
  "transformers>=4.31.0", # lower bound required for mistral models (could potentially be lowered)
]
openai = ["openai>=0.27.4"]
cohere = ["cohere>=4.34"]
sonar = [
  "fairseq2>=0.1.0",  # requires sudo apt-get update -y; sudo apt install libsndfile1
  "sonar-space>=0.1.0",
] # fairseq2 only works for linux at the moment

fasttext = ["pybind11>=2.11.0", "fasttext-wheel>=0.9.0"]


[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
homepage = "https://github.com/KennethEnevoldsen/scandinavian-embedding-benchmark"
repository = "https://github.com/KennethEnevoldsen/scandinavian-embedding-benchmark"
documentation = "https://KennethEnevoldsen.github.io/scandinavian-embedding-benchmark/"


[project.scripts]
seb = "seb.cli.cli:setup_cli"

[tool.pyright]
exclude = [".*venv*"]
pythonPlatform = "Darwin"

[tool.ruff]
line-length = 150
extend-include = ["*.ipynb"]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "C4",
  "COM",
  "D417",
  "E",
  "ERA",
  "F",
  "I",
  "ICN",
  "NPY001",
  "PD002",
  "PIE",
  "PLE",
  "PLW",
  "PT",
  "UP",
  "Q",
  "PTH",
  "RSE",
  "RET",
  "RUF",
  "SIM",
  "W",
]
ignore = [
  "ANN101",
  "ANN102",
  "ANN401",
  "E402",
  "E501",
  "E741",
  "F401",
  "F841",
  "RET504",
  "COM812",
]
ignore-init-module-imports = true
# Allow autofix for all enabled rules (when `--fix`) is provided.
unfixable = ["ERA"]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "__init__.py",
  "docs/conf.py",
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py39"

[tool.ruff.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:project.version"]
build_command = "python -m pip install build; python -m build"

[tool.setuptools]
include-package-data = true
